--- a/index.html
+++ b/index.html
@@ -4,14 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors Game - Best of 5</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="javascript.js"></script>
+    <div id="container">
+        <div id="textup">Round 1: Choose your option:
+        </div>
+
+        <div id="options">
+            <div id="rockdiv">
+                <img src="/images/rock.png" id="rock">
+                <p>Rock</p>
+            </div>
+            <div id="paperdiv">
+                <img src="/images/paper.png" id="paper">
+                <p>Paper</p>
+            </div>
+            <div id="scissorsdiv">
+                <img src="/images/scissors.png" id="scissors">
+                <p>Scissors</p>
+            </div>
+        </div>
+
+        <div id="choices"></div>
+        <div id="result"></div>
+        <div id="score">You 0 x 0 Bot</div>
+
+        </div>
+    </div>
 
 
 
 
-    
+    <script src="javascript.js" defer></script>
 </body>
 </html>
